
[gd_scene load_steps=3 format=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="QuestionLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 80.0
text = "Question will appear here"

[node name="TimerLabel" type="Label" parent="HUD"]
margin_left = 520.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 80.0
text = "10s"

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2(400,500)
script = ExtResource( 2 )

[node name="Bullet" type="Area2D" parent="Player"]
visible = false
script = ExtResource( 3 )

[node name="Enemies" type="Node2D" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 520.0
text = "Score: 0"

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=3]
